src/binding/slepc4py/src/slepc4py/SLEPc/slepceps.pxi


    PetscErrorCode EPSGDSetKrylovStart(SlepcEPS,PetscBool)
    PetscErrorCode EPSGDGetKrylovStart(SlepcEPS,PetscBool*)
    PetscErrorCode EPSGDSetBlockSize(SlepcEPS,PetscInt)
    PetscErrorCode EPSGDGetBlockSize(SlepcEPS,PetscInt*)
    PetscErrorCode EPSGDSetRestart(SlepcEPS,PetscInt,PetscInt)
    PetscErrorCode EPSGDGetRestart(SlepcEPS,PetscInt*,PetscInt*)
    PetscErrorCode EPSGDSetInitialSize(SlepcEPS,PetscInt)
    PetscErrorCode EPSGDGetInitialSize(SlepcEPS,PetscInt*)
    PetscErrorCode EPSGDSetBOrth(SlepcEPS,PetscBool)
    PetscErrorCode EPSGDGetBOrth(SlepcEPS,PetscBool*)
    PetscErrorCode EPSGDSetDoubleExpansion(SlepcEPS,PetscBool)
    PetscErrorCode EPSGDGetDoubleExpansion(SlepcEPS,PetscBool*)

    PetscErrorCode EPSJDSetKrylovStart(SlepcEPS,PetscBool)
    PetscErrorCode EPSJDGetKrylovStart(SlepcEPS,PetscBool*)
    PetscErrorCode EPSJDSetBlockSize(SlepcEPS,PetscInt)
    PetscErrorCode EPSJDGetBlockSize(SlepcEPS,PetscInt*)
    PetscErrorCode EPSJDSetRestart(SlepcEPS,PetscInt,PetscInt)
    PetscErrorCode EPSJDGetRestart(SlepcEPS,PetscInt*,PetscInt*)
    PetscErrorCode EPSJDSetInitialSize(SlepcEPS,PetscInt)
    PetscErrorCode EPSJDGetInitialSize(SlepcEPS,PetscInt*)
    PetscErrorCode EPSJDSetFix(SlepcEPS,PetscReal)
    PetscErrorCode EPSJDGetFix(SlepcEPS,PetscReal*)
    PetscErrorCode EPSJDSetConstCorrectionTol(SlepcEPS,PetscBool)
    PetscErrorCode EPSJDGetConstCorrectionTol(SlepcEPS,PetscBool*)
    PetscErrorCode EPSJDSetBOrth(SlepcEPS,PetscBool)
    PetscErrorCode EPSJDGetBOrth(SlepcEPS,PetscBool*)

    PetscErrorCode EPSRQCGSetReset(SlepcEPS,PetscInt)
    PetscErrorCode EPSRQCGGetReset(SlepcEPS,PetscInt*)

    PetscErrorCode EPSLOBPCGSetBlockSize(SlepcEPS,PetscInt)
    PetscErrorCode EPSLOBPCGGetBlockSize(SlepcEPS,PetscInt*)
    PetscErrorCode EPSLOBPCGSetRestart(SlepcEPS,PetscReal)
    PetscErrorCode EPSLOBPCGGetRestart(SlepcEPS,PetscReal*)
    PetscErrorCode EPSLOBPCGSetLocking(SlepcEPS,PetscBool)
    PetscErrorCode EPSLOBPCGGetLocking(SlepcEPS,PetscBool*)

    PetscErrorCode EPSLyapIISetRanks(SlepcEPS,PetscInt,PetscInt)
    PetscErrorCode EPSLyapIIGetRanks(SlepcEPS,PetscInt*,PetscInt*)

    ctypedef enum SlepcEPSCISSQuadRule "EPSCISSQuadRule":
        EPS_CISS_QUADRULE_TRAPEZOIDAL
        EPS_CISS_QUADRULE_CHEBYSHEV

    ctypedef enum SlepcEPSCISSExtraction "EPSCISSExtraction":
        EPS_CISS_EXTRACTION_RITZ
        EPS_CISS_EXTRACTION_HANKEL

    PetscErrorCode EPSCISSSetExtraction(SlepcEPS,SlepcEPSCISSExtraction)
    PetscErrorCode EPSCISSGetExtraction(SlepcEPS,SlepcEPSCISSExtraction*)
    PetscErrorCode EPSCISSSetQuadRule(SlepcEPS,SlepcEPSCISSQuadRule)
    PetscErrorCode EPSCISSGetQuadRule(SlepcEPS,SlepcEPSCISSQuadRule*)
    PetscErrorCode EPSCISSSetSizes(SlepcEPS,PetscInt,PetscInt,PetscInt,PetscInt,PetscInt,PetscBool)
    PetscErrorCode EPSCISSGetSizes(SlepcEPS,PetscInt*,PetscInt*,PetscInt*,PetscInt*,PetscInt*,PetscBool*)
    PetscErrorCode EPSCISSSetThreshold(SlepcEPS,PetscReal,PetscReal)
    PetscErrorCode EPSCISSGetThreshold(SlepcEPS,PetscReal*,PetscReal*)
    PetscErrorCode EPSCISSSetRefinement(SlepcEPS,PetscInt,PetscInt)
    PetscErrorCode EPSCISSGetRefinement(SlepcEPS,PetscInt*,PetscInt*)
    PetscErrorCode EPSCISSSetUseST(SlepcEPS,PetscBool)
    PetscErrorCode EPSCISSGetUseST(SlepcEPS,PetscBool*)
    PetscErrorCode EPSCISSGetKSPs(SlepcEPS,PetscInt*,PetscKSP**)

cdef extern from * nogil:
    PetscErrorCode VecDuplicate(PetscVec,PetscVec*)
    PetscErrorCode MatCreateVecs(PetscMat,PetscVec*,PetscVec*)

# -----------------------------------------------------------------------------

cdef inline EPS ref_EPS(SlepcEPS eps):
    cdef EPS ob = <EPS> EPS()
    ob.eps = eps
    CHKERR( PetscINCREF(ob.obj) )
    return ob

# -----------------------------------------------------------------------------

cdef PetscErrorCode EPS_Stopping(
    SlepcEPS                eps,
    PetscInt                its,
    PetscInt                max_it,
    PetscInt                nconv,
    PetscInt                nev,
    SlepcEPSConvergedReason *r,
    void                    *ctx,
    ) except PETSC_ERR_PYTHON with gil:
    cdef EPS Eps = ref_EPS(eps)
    (stopping, args, kargs) = Eps.get_attr('__stopping__')
    reason = stopping(Eps, toInt(its), toInt(max_it), toInt(nconv), toInt(nev), *args, **kargs)
    if   reason is None:  r[0] = EPS_CONVERGED_ITERATING
    elif reason is False: r[0] = EPS_CONVERGED_ITERATING
    elif reason is True:  r[0] = EPS_CONVERGED_USER
    else:                 r[0] = reason

# -----------------------------------------------------------------------------

cdef PetscErrorCode EPS_Arbitrary(
    PetscScalar  er,
    PetscScalar  ei,
    PetscVec     xr,
    PetscVec     xi,
    PetscScalar* rr,
    PetscScalar* ri,
    void         *ctx,
    ) except PETSC_ERR_PYTHON with gil:
    (arbitrary, args, kargs) = <object>ctx
    cdef Vec Vr = ref_Vec(xr)
    cdef Vec Vi = ref_Vec(xi)
    r = arbitrary(toComplex(er, ei), Vr, Vi, args, **kargs)
    if sizeof(PetscScalar) == sizeof(PetscReal):
        rr[0] = asComplexReal(r)
        ri[0] = asComplexImag(r)
    else:
        rr[0] = asScalar(r)
        ri[0] = 0.0

# -----------------------------------------------------------------------------

cdef PetscErrorCode EPS_Comparison(
    PetscScalar  ar,
    PetscScalar  ai,
    PetscScalar  br,
    PetscScalar  bi,
    PetscInt*    res,
    void         *ctx,
    ) except PETSC_ERR_PYTHON with gil:
    (comparison, args, kargs) = <object>ctx
    r = comparison(toComplex(ar, ai), toComplex(br, bi), args, **kargs)
    res[0] = asInt(r)

# -----------------------------------------------------------------------------

cdef PetscErrorCode EPS_Monitor(
    SlepcEPS    eps,
    PetscInt    its,
    PetscInt    nconv,
    PetscScalar *eigr,
    PetscScalar *eigi,
    PetscReal   *errest,
    PetscInt    nest,
    void        *ctx,
    ) except PETSC_ERR_PYTHON with gil:
    cdef EPS Eps = ref_EPS(eps)
    cdef object monitorlist = Eps.get_attr('__monitor__')
    if monitorlist is None: return PETSC_SUCCESS
    cdef object eig = [toComplex(eigr[i], eigi[i]) for i in range(nest)]
    cdef object err = [toReal(errest[i]) for i in range(nest)]
    for (monitor, args, kargs) in monitorlist:
        monitor(Eps, toInt(its), toInt(nconv), eig, err, *args, **kargs)
    return PETSC_SUCCESS

# -----------------------------------------------------------------------------
